--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 logs
-project/project
-project/target
+project/*
 target
 tmp
 .history
@@ -13,5 +12,6 @@ dist
 /.project
 /RUNNING_PID
 /.settings
-
+example.sh
+.sbtserver/
     
